--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,16 @@
-remote_theme: b2a3e8/jekyll-theme-console
+# Example Site settings
+
+#google_analytics: UA-NNNNNNNN-N
+
+header_pages:
+  - index.md
+  - about.md
+  - strategies.md
+
+#footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
+
+#style: light # dark (default) or light
+listen_for_clients_preferred_style: true # true or false (default)
+
+plugins:
+  - jekyll-seo-tag
